--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="90%" border="0" class="news_table">
 <tr>
 	 <td width="12%">8/2018 </td>
-	 <td width="88%">Source codes of ECCV2018 work is now available.</td>
+	 <td width="88%">Source code of ECCV2018 work is now available.</td>
  </tr>
 <tr>
 	 <td width="12%">7/2014 </td>
@@ -209,19 +209,15 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
  </tr>
 <tr>
  	 <td width="12%">7/2014 </td>
- 	 <td width="88%">Souce codes of our TPAMI2014 work is now available.</td>
+ 	 <td width="88%">Souce code of our TPAMI2014 work is now available.</td>
 </tr>
 <tr>
 	 <td width="12%">7/2014 </td>
-	 <td width="88%">Souce codes of our CVPR2014 work is now available.</td>
+	 <td width="88%">Souce code of our CVPR2014 work is now available.</td>
  </tr>
  <tr>
     <td width="12%">7/2012 </td>
-    <td width="88%">Souce codes of our CVPR2012 work is now available.</td>
-  </tr>
-  <tr>
-    <td width="12%">3/2012 </td>
-    <td width="88%">Our paper accepted at CVPR2012. Pdf is available.</td>
+    <td width="88%">Souce code of our CVPR2012 work is now available.</td>
   </tr>
   <tr>
     <td>3/2012</td>
@@ -235,30 +231,30 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
-    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
-    <td><strong>CNN-PS: CNN-based Photometricc Stereo for General Non-Convex Surfaces.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+    <td><img src="fig_eccv2018.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>CNN-PS: CNN-based Photometricc Stereo for General Non-Convex Surfaces. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of European Conference on Computer Vision (ECCV), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
 </tr>
 <tr>
-    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_mta2018.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Efficiency-enhanced cost-volume filtering featuring coarse-to-fine strategy.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://link.springer.com/content/pdf/10.1007%2Fs11042-017-4897-1.pdf" target="_blank">paper</a>). </span></td>>
 </tr>
 <tr>
-    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_eccv2018workshop.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Scale Drift Correction of Camera Geo-Localization using Geo-Tagged Images</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
 </tr>
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>From Bayesian Sparsity to Gated Recurrent Nets</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. NIPS 2017 (accepted as an oral presentation, 1.20%): 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. In proceedings of Neural Information Processing Systems（NIPS）, 2017 (accepted as an oral presentation, 1.20%): 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>>
 </tr>
 
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Panoramic Structure from Motion via Geometric Relationship Detection</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ivaylo Boyadzhiev, Qi Shan, Yasutaka Furukawa.  CoRR abs/1612.01256, 2016 (<a href="https://arxiv.org/abs/1612.01256" target="_blank">arXiv paper</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ivaylo Boyadzhiev, Qi Shan, Yasutaka Furukawa. CoRR abs/1612.01256, 2016 (<a href="https://arxiv.org/abs/1612.01256" target="_blank">arXiv paper</a>). </span></td>>
 </tr>
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
@@ -298,7 +294,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
   <tr>
     <td><img src="fig_cvpr2012.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Robust Photometric Stereo using Sparse Regression</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa.    In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=19IyBj3oynHXD7VQqX5BhG5l4lXlXhe4V" target="_blank">codes</a>).</td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=19IyBj3oynHXD7VQqX5BhG5l4lXlXhe4V" target="_blank">codes</a>).</td>>
   </tr>
 </table>
 
