--- a/index.html
+++ b/index.html
@@ -191,12 +191,13 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
       </tr>
     </table>
 <p>&nbsp;</p>
-<h2 class="session2">About me</h2>
+<p>&nbsp;</p>
+<h3 class="session">About me</h3>
 <p align="left">
-<p>- I was a post-doc researcher in department of Computer Science and Enginieering, Washington University in St. Louis from June 2014 to November 2016 and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
-<p>- I have got my Ph. D in 2014 and MS in 2011 in University of tokyo「nder the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
-<p>- I have got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
-<p>- I have worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
+<p>- From June 2014 to November 2016, I was a post-doc researcher in Washington University in St. Louis and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
+<p>- I got my Ph. D in 2014 and MS in 2011 in University of tokyo under the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
+<p>- I got my BA of Psychology from the University of Tokyo in 2019 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
+<p>- I worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
 <h2 class="session">NEWS</h2>
 <table width="90%" border="0" class="news_table">
 <tr>
@@ -231,7 +232,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
-    <td><img src="fig_eccv2018.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_eccv2018.png" width="192" height="75" class="image_float_left" /> </td>
     <td><strong>CNN-PS: CNN-based Photometricc Stereo for General Non-Convex Surfaces. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of European Conference on Computer Vision (ECCV), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
 </tr>
@@ -246,20 +247,20 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
 </tr>
 <tr>
-    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_nips2017.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>From Bayesian Sparsity to Gated Recurrent Nets</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. In proceedings of Neural Information Processing Systems（NIPS）, 2017 (accepted as an oral presentation, 1.20%): 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>>
 </tr>
 
 <tr>
-    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_panosfm2016.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Panoramic Structure from Motion via Geometric Relationship Detection</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ivaylo Boyadzhiev, Qi Shan, Yasutaka Furukawa. CoRR abs/1612.01256, 2016 (<a href="https://arxiv.org/abs/1612.01256" target="_blank">arXiv paper</a>). </span></td>>
 </tr>
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Structured Indoor Modeling </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation, 3.30%) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>>
 </tr>
 <tr>
     <td><img src="fig_icip2014.bmp" width="192" height="99" class="image_float_left" /> </td>
