--- a/index.html
+++ b/index.html
@@ -192,12 +192,13 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     </table>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<h3 class="session">About me</h3>
+<h2 class="session">About me</h2>
 <p align="left">
 <p>- From June 2014 to November 2016, I was a post-doc researcher in Washington University in St. Louis and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
 <p>- I got my Ph. D in 2014 and MS in 2011 in University of tokyo under the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
-<p>- I got my BA of Psychology from the University of Tokyo in 2019 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
+<p>- I got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
 <p>- I worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
+
 <h2 class="session">NEWS</h2>
 <table width="90%" border="0" class="news_table">
 <tr>
@@ -234,43 +235,43 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_eccv2018.png" width="192" height="75" class="image_float_left" /> </td>
     <td><strong>CNN-PS: CNN-based Photometricc Stereo for General Non-Convex Surfaces. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of European Conference on Computer Vision (ECCV), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of European Conference on Computer Vision (ECCV), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>
 </tr>
 <tr>
     <td><img src="fig_mta2018.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Efficiency-enhanced cost-volume filtering featuring coarse-to-fine strategy.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://link.springer.com/content/pdf/10.1007%2Fs11042-017-4897-1.pdf" target="_blank">paper</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://link.springer.com/content/pdf/10.1007%2Fs11042-017-4897-1.pdf" target="_blank">paper</a>). </span></td>
 </tr>
 <tr>
     <td><img src="fig_eccv2018workshop.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Scale Drift Correction of Camera Geo-Localization using Geo-Tagged Images</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>
 </tr>
 <tr>
     <td><img src="fig_nips2017.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>From Bayesian Sparsity to Gated Recurrent Nets</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. In proceedings of Neural Information Processing Systems（NIPS）, 2017 (accepted as an oral presentation, 1.20%): 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. In proceedings of Neural Information Processing Systems（NIPS）, 2017 (accepted as an oral presentation, 1.20%): 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>
 </tr>
 
 <tr>
     <td><img src="fig_panosfm2016.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Panoramic Structure from Motion via Geometric Relationship Detection</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ivaylo Boyadzhiev, Qi Shan, Yasutaka Furukawa. CoRR abs/1612.01256, 2016 (<a href="https://arxiv.org/abs/1612.01256" target="_blank">arXiv paper</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ivaylo Boyadzhiev, Qi Shan, Yasutaka Furukawa. CoRR abs/1612.01256, 2016 (<a href="https://arxiv.org/abs/1612.01256" target="_blank">arXiv paper</a>). </span></td>
 </tr>
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Structured Indoor Modeling </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation, 3.30%) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation, 3.30%) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>
 </tr>
 <tr>
     <td><img src="fig_icip2014.bmp" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Coarse-to-Fine Strategy for Efficient Cost-Volume Filtering</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamasaki and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2014 (<a href="icip2014.pdf" target="_blank">paper</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamasaki and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2014 (<a href="icip2014.pdf" target="_blank">paper</a>). </span></td>
   </tr>
 <tr>
     <td><img src="fig_cvpr2014.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Constrained Bivariate Regression for General Isotropic Surfaces</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=1sTuxhKbgnd7iAsyFOKf5zCMEraORpwNx" target="_blank">source codes</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=1sTuxhKbgnd7iAsyFOKf5zCMEraORpwNx" target="_blank">source codes</a>). </span></td>
   </tr>
   <tr>
     <td><img src="fig_pami2014.png" width="192" height="99" class="image_float_left" /> </td>
@@ -280,25 +281,24 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
   <tr>
     <td><img src="fig_icip2013.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Depth Map Inpainting and Super-Resolution based on Internal Statistics of Geometry and Appearance</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ji-Ho Cho and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2013, (<a href="ICIP2013_SR_cm.pdf" target="_blank">pdf</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ji-Ho Cho and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2013, (<a href="ICIP2013_SR_cm.pdf" target="_blank">pdf</a>). </span></td>
   </tr>
   <tr>
     <td><img src="fig_ivmsp2013.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Depth Map Upsampling using Cost-Volume Filtering</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ji-Ho Cho, Satoshi Ikehata, Hyunjin Yoo, Margrit Gelautz and Kiyoharu Aizawa. In proceedings of 11th IEEE IVMSP Workshop: 3D Image/Video Technologies and Applications, 2013, (<a href="IVMSP2013_CR.pdf" target="_blank">pdf</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ji-Ho Cho, Satoshi Ikehata, Hyunjin Yoo, Margrit Gelautz and Kiyoharu Aizawa. In proceedings of 11th IEEE IVMSP Workshop: 3D Image/Video Technologies and Applications, 2013, (<a href="IVMSP2013_CR.pdf" target="_blank">pdf</a>). </span></td>
   </tr>
   <tr>
     <td><img src="fig_apsipa.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Confidence-based Refinement of Corrupted Depth Maps</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa.    In proceedings of Signal & Information Processing Association Annual Summit and Conference (APSIPA ASC), 2012, (<a href="ikehata_apsipa2012.pdf" target="_blank">pdf</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa.    In proceedings of Signal & Information Processing Association Annual Summit and Conference (APSIPA ASC), 2012, (<a href="ikehata_apsipa2012.pdf" target="_blank">pdf</a>). </span></td>
   </tr>
   <tr>
     <td><img src="fig_cvpr2012.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Robust Photometric Stereo using Sparse Regression</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=19IyBj3oynHXD7VQqX5BhG5l4lXlXhe4V" target="_blank">codes</a>).</td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=19IyBj3oynHXD7VQqX5BhG5l4lXlXhe4V" target="_blank">codes</a>).</td>
   </tr>
 </table>
-
 
 <h4>&nbsp;</h4>
   <!-- end .content --></div>
