--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
   </tr>
 </table>
 <h3 class="session">Class (SOKENDAI)</h3>
-	<p> Fall 2018: <a href="mediaprocessing.html" target="_blank">Fundamentals of Media Processing</a>.
+	<p> Fall 2018: <a href="mediaprocessing.html" target="_blank">Fundamentals of Media Processing</a>.</p>
 <h3 class="session">Research Interests</h3>
     <p>3D Scene Reconstruction, Time-of-flight Imaging, Image Super-resolution, Virtual and Augmented Reality, Human Cognition and Perception</p>
 
