--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -25,7 +25,7 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <tr>
     <td>Tue, Oct. 16</td>
     <td>Introduction</td>
-    <td><a href="lectures/01.pdf">pdf</a></td> 
+    <td><a href="01.pdf">pdf</a></td> 
 </tr>
 
 <tr><td colspan="5" style="background-color:#FFC6A5">
