--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -47,7 +47,8 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <tr>
     <td>Tue, Nov. 6</td>
     <td>Machine Learning Basics (1)</td>
-</tr>
+    <td><a href="0.pdf">pdf</a></td>     
+        </tr>
 
 <tr>
     <td>Tue, Nov. 13</td>
