--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -36,7 +36,7 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <tr>
     <td>Tue, Oct. 23</td>
     <td>Basic mathematics (1) (Linear algebra, probability, numerical computation</td>
-　　<td rowspan="2"><a href="02_03.pdf">pdf (Last update on Oct.19.2018)</a></td> 
+　　<td rowspan="2"><a href="02_03.pdf">pdf (Last update on Oct.29.2018)</a></td> 
 </tr>
 <tr>
     <td>Tue, Oct. 30</td>
@@ -47,7 +47,7 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <tr>
     <td>Tue, Nov. 6</td>
     <td>Machine Learning Basics (1)</td>
-    <td><a href="04.pdf (Last update on Oct.29.2018)">pdf</a></td>     
+    <td><a href="04.pdf">pdf (Last update on Oct.29.2018)</a></td>     
         </tr>
 
 <tr>
