--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -60,8 +60,8 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 
 <tr>
     <td>Tue, Nov. 20</td>
-    <td>Deep Feedforward Networks (Last update on Nov.12.2018)</td>
-    <td><a href="06.pdf">pdf</a></td> 
+    <td>Deep Feedforward Networks</td>
+    <td><a href="06.pdf">pdf (Last update on Nov.12.2018)</a></td> 
     
 </tr>
 
