--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -68,6 +68,7 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <tr>
     <td>Tue, Nov. 27</td>
     <td>Regularization and Deep Learning</td>
+        <td><a href="07.pdf">pdf (Last update on Nov.19.2018)</a></td>
     
 </tr>
 
