--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -87,13 +87,13 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 
 <tr>
     <td>Tue, Dec. 11</td>
-    <td>Convolutional Neural Networks and Its Application (1)</td>
-    <
+    <td>Convolutional Neural Networks and Its Application</td>
+    <td><a href="09_10.pdf">pdf (Last update on Dec.03.2018)</a></td>
 </tr>
 
 <tr>
     <td>Tue, Dec. 18</td>
-    <td>Convolutional Neural Networks and Its Application (2)</td>
+    <td>Generative Adversarial Networks (GAN) and Its Application </td>
 
 </tr>
 
