--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -102,5 +102,5 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 
 
 <div id=footer>
-<p style="CLEAR: both; margin: 0px">Comments, questions to >Satoshi Ikeahta (sikehata@nii.ac.jp)</A>. 
+<p style="CLEAR: both; margin: 0px">Comments, questions to >Satoshi Ikehata (sikehata@nii.ac.jp)</A>. 
 </p></div></div></body></html>
