--- a/mediaprocessing.html
+++ b/mediaprocessing.html
@@ -12,6 +12,13 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <br><h2>Textbook</h2>
 <a href="https://www.deeplearningbook.org/lecture_slides.html">"Deep Learning"</a> by Ian Goodfellow. The book is available for free online or available for purchase.
 
+</center>
+<br><h2>Final Report</h2>
+Summarize and discuss a machine learning paper which was not mentioned in the lecture, was published in 2017 or 2018, and was cited by more than 100 papers (A4 2pages maximum, deadline will be announced by Prof. Kodama)
+<br>- E.g.) Why do you think the paper was cited by many papers? What is the importance?
+<br>- E.g.) Any suggestions to improve the result?
+<br>- Please freely describe your idea rather than just summarize it!
+
 
 
 <h2>Syllabus</h2>
