--- a/mediaprocessing2020.html
+++ b/mediaprocessing2020.html
@@ -5,58 +5,34 @@
 <body>
 <div id=primarycontent>
 <center><h1>Fundamentals of Media Processing (Deep Learning Part)</h1>
-<h2>Fall 2018, 13:00 to 14:30<br>
+<h2>Fall 2020, Tuesday, 13:00 to 14:30<br>
 Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2>
 
 </center>
 <br><h2>Textbook</h2>
 <a href="https://www.deeplearningbook.org/lecture_slides.html">"Deep Learning"</a> by Ian Goodfellow. The book is available for free online or available for purchase.
-
 </center>
-<!-- <br><h2>Final Report</h2>
-Summarize and discuss a machine learning paper which was not mentioned in the lecture, was published in 2017 or 2018, and was cited by more than 100 papers (A4 2pages maximum, deadline will be announced by Prof. Kodama)
-<br>- E.g.) Why do you think the paper was cited by many papers? What is the importance?
-<br>- E.g.) Any suggestions to improve the result?
-<br>- Please freely describe your idea rather than just summarize it! -->
-
-
-
 <h2>Syllabus</h2>
 <table cellpadding=5 border=1  width="100%">
 <tr>
-        <td style="width:100px"><b>Class Date</b></td>
-        <td style="width:350px"><b>Topic</b></td>
-        <td style="width:100px"><b>Slides</b></td>
+      <td style="width:100px"><b>Class Date</b></td>
+      <td style="width:350px"><b>Topic</b></td>
+      <td style="width:100px"><b>Slides</b></td>
 </tr>
-
 <tr>
-    <td>Tue, Oct. 16</td>
-    <td>Introduction</td>
-    <td><a href="01.pdf">pdf</a></td>
+    <td>Tue, Oct. 27</td>
+    <td>Introduction, Probability, Information Theory</td>
+    <td><a href="01_2020.pdf">pdf</a></td>
 </tr>
-
 <tr><td colspan="5" style="background-color:#FFC6A5">
 <center>Basic of Machine Learning</center>
 </td></tr>
-
-
-<tr>
-    <td>Tue, Oct. 23</td>
-    <td>Basic mathematics (1) (Linear algebra, probability, numerical computation</td>
-　　<td rowspan="2"><a href="02_03.pdf">pdf (Last update on Oct.29.2018)</a></td>
-</tr>
-<tr>
-    <td>Tue, Oct. 30</td>
-    <td>Basic mathematics (2) (Linear algebra, probability, numerical computation</td>
+<tr><td>Tue, Nov. 10</td><td>Machine Learning Basics</td>
+  <td rowspan="2"><a href="02_2020.pdf">pdf</a></td>
 </tr>
 
-<tr>
-    <td>Tue, Nov. 6</td>
-    <td>Machine Learning Basics (1)</td>
-　　<td rowspan="2"><a href="04_05.pdf">pdf (Last update on Nov.12.2018)</a></td>
-</tr>
-<tr>
-    <td>Tue, Nov. 13</td>
+<!-- <tr>
+    <td>Tue, Nov. 10</td>
     <td>Machine Learning Basics (2)</td>
 </tr>
 
@@ -102,7 +78,7 @@ Summarize and discuss a machine learning paper which was not mentioned in the le
     <td>Tue, Dec. 18</td>
     <td>Generative Adversarial Networks (GAN) and Its Application </td>
     <td><a href="11.pdf">pdf (Last update on Dec.18.2018)</a></td>
-</tr>
+</tr> -->
 
 
 </table>
