--- a/mediaprocessing2020.html
+++ b/mediaprocessing2020.html
@@ -34,11 +34,11 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <center>Deep Neural Networks</center>
 </td></tr>
 <tr><td>Tue, Nov. 17, Nov. 24, Dec.1</td><td>Deep Feedforward Networks</td>
-  <td rowspan="2"><a href="03_2020.pdf">pdf</a></td>
+  <td><a href="03_2020.pdf">pdf</a></td>
 </tr>
 <tr>
 <td>Tue, Nov. 17, Nov. 24, Dec.1</td><td>Regularizaation and Deep Learning</td>
-<td rowspan="2"><a href="04_2020.pdf">pdf</a></td>
+<td><a href="04_2020.pdf">pdf</a></td>
 </tr>
 
 <!-- <tr>
