--- a/mediaprocessing2020.html
+++ b/mediaprocessing2020.html
@@ -37,7 +37,7 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
   <td><a href="03_2020.pdf">pdf</a></td>
 </tr>
 <tr>
-<td>Tue, Nov. 17, Nov. 24, Dec.1</td><td>Regularizaation and Deep Learning</td>
+<td>Tue, Nov. 17, Nov. 24, Dec.1</td><td>Regularization and Deep Learning</td>
 <td><a href="04_2020.pdf">pdf</a></td>
 </tr>
 
