--- a/mediaprocessing2020.html
+++ b/mediaprocessing2020.html
@@ -40,6 +40,10 @@ Instructor: <a href="https://satoshi-ikehata.github.io/">Satoshi Ikehata</a></h2
 <td>Tue, Nov. 17, Nov. 24, Dec.1</td><td>Regularization and Deep Learning</td>
 <td><a href="04_2020.pdf">pdf</a></td>
 </tr>
+<tr>
+<td>Tue, Nov. 17, Nov. 24, Dec.1</td><td>Optimization for Training Deep Models</td>
+<td><a href="05_2020.pdf">pdf</a></td>
+</tr>
 
 <!-- <tr>
     <td>Tue, Nov. 10</td>
