--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         <td align="left">E-mail: sikehata@nii.ac.jp</td>
       </tr>
       <tr>
-        <td height="27" align="left"> (<a href="cv_ikehata.pdf" target="_blank">curriculum vitae</a>) </td>
+        <td height="27" align="left"> (<a href="cv.pdf" target="_blank">curriculum vitae</a>) </td>
       </tr>
     </table>
 <p>&nbsp;</p>
