--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 </tr>  
 <tr>
     <td><img src="fig_eccv2018.png" width="192" height="75" class="image_float_left" /> </td>
+    <td><strong>The Color Black is Most Important and Special for Making Professional
+Wrestlers Attractive and Fearful. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Tomohiko Akagi, Satoshi Ikehata, Takeharu Seno.  In proceedings of The 5th asian color association conference (ACA), 2019. </span></td>
+</tr>
+<tr>
+    <td><img src="fig_eccv2018.png" width="192" height="75" class="image_float_left" /> </td>
     <td><strong>CNN-PS: CNN-based Photometricc Stereo for General Non-Convex Surfaces. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of European Conference on Computer Vision (ECCV), 2018 (<a href="https://github.com/satoshi-ikehata/CNN-PS" target="_blank">paper, supplementary, codes (github)</a>). </span></td>
 </tr>
