--- a/index.html
+++ b/index.html
@@ -236,8 +236,10 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="pstransformer.jpg" width="192" height="75" class="image_float_left" /> </td>
     <td><strong>PS-Transformer: Learning Sparse Photometric Stereo Network using Self-Attention Mechanism. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of British Machine Vision Conference (BMVC), 2021 (<a href="https://www.bmvc2021-virtualconference.com/assets/papers/0319.pdf" target="_blank">paper</a>). </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of British Machine Vision Conference (BMVC), 2021 (<a href="https://www.bmvc2021-virtualconference.com/assets/papers/0319.pdf" target="_blank">paper</a>, <a href="https://github.com/satoshi-ikehata/PS-Transformer-BMVC2021" target="_blank">github</a>). </span></td>
 </tr>
+	  
+	
 <tr>
     <td><img src="pdot.jpg" width="192" height="75" class="image_float_left" /> </td>
     <td><strong>Intersection Prediction from Single 360° Image via Deep Detection of Possible Direction of Travel.</strong><br />
