--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="90%" border="0" class="news_table">
 <tr>
 	 <td width="12%">8/2018 </td>
+	 <td width="88%">Source code of BMVC2021 work is now available.</td>
+</tr>
+	  
+<tr>
+	 <td width="12%">8/2018 </td>
 	 <td width="88%">Source code of ECCV2018 work is now available.</td>
  </tr>
 <tr>
@@ -233,6 +238,12 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
+<tr>
+    <td><img src="fig_cvpr2022.jpg" width="192" height="75" class="image_float_left" /> </td>
+    <td><strong>Universal Photometric Stereo Network using Global Lighting Contexts. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (to appear). </span></td>
+</tr>
+	  
 <tr>
     <td><img src="pstransformer.jpg" width="192" height="75" class="image_float_left" /> </td>
     <td><strong>PS-Transformer: Learning Sparse Photometric Stereo Network using Self-Attention Mechanism. </strong><br />
