--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
-    <td><img src="fig_cvpr2022.jpg" width="192" height="120" class="image_float_left" /> </td>
+    <td><img src="fig_cvpr2022.png" width="192" height="75" class="image_float_left" /> </td>
     <td><strong>Universal Photometric Stereo Network using Global Lighting Contexts. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (to appear). </span></td>
 </tr>
