--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
-    <td><img src="fig_cvpr2022.png" width="160" height="75" class="image_float_left" /> </td>
+    <td><img src="fig_cvpr2022.png" width="192" class="image_float_left" /> </td>
     <td><strong>Universal Photometric Stereo Network using Global Lighting Contexts. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (to appear). </span></td>
 </tr>
 	  
 <tr>
-    <td><img src="pstransformer.jpg" width="192" height="75" class="image_float_left" /> </td>
+    <td><img src="pstransformer.jpg" width="192" class="image_float_left" /> </td>
     <td><strong>PS-Transformer: Learning Sparse Photometric Stereo Network using Self-Attention Mechanism. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of British Machine Vision Conference (BMVC), 2021 (<a href="https://www.bmvc2021-virtualconference.com/assets/papers/0319.pdf" target="_blank">paper</a>, <a href="https://github.com/satoshi-ikehata/PS-Transformer-BMVC2021" target="_blank">github</a>). </span></td>
 </tr>
@@ -258,7 +258,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 	  British Machine Vision Conference (BMVC), 2021 (<a href="https://www.bmvc2021-virtualconference.com/assets/papers/0423.pdf" target="_blank">paper</a>). </span></td>
 </tr>
 <tr>
-    <td><img src="360sr.jpg" width="192" height="75" class="image_float_left" /> </td>
+    <td><img src="360sr.jpg" width="192" class="image_float_left" /> </td>
     <td><strong>360° Single Image Super Resolution via Distortion-Aware Network and Distorted Perspective Images.</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Akito Nishiyama, Satoshi Ikehata, Kiyoharu Aizawa.  In proceedings of International Conference on Image Processing (ICIP), 2021 (<a href="https://ieeexplore.ieee.org/document/9506233" target="_blank">paper</a>). </span></td>
 </tr>	  
